--- a/playbooks/templates/defaults.conf.j2
+++ b/playbooks/templates/defaults.conf.j2
@@ -12,7 +12,9 @@ defaultnode:
   profiles:
   - default
   network devices:
+    default:
+      netmask: 255.255.0.0
     dummy:
       device: eth0
       type: ethernet
-      netmask: 255.0.0.0
+      netmask: 255.255.0.0
