Commit all files for the OpenHPC fix

--- a/playbooks/templates/warewulf.conf.j2
+++ b/playbooks/templates/warewulf.conf.j2
@@ -14,7 +14,7 @@ dhcp:
   template: static
   range start: 10.5.1.0
   range end: 10.5.254.254
-  systemd name: isc-dhcp-server
+  systemd name: dhcpd
 tftp:
   enabled: true
   systemd name: tftp
